import { describe, expect, it } from 'vitest'
import { generateTheme } from '../../src/theme/generator'

describe('Snapshot Tests - Generated Theme', () => {
  it('should match the expected theme snapshot', async () => {
    const theme = await generateTheme()
    expect(theme).toMatchSnapshot()
  })

  it('should match the expected theme colors snapshot', async () => {
    const theme = await generateTheme()
    expect(theme.colors).toMatchSnapshot()
  })

  it('should match the expected theme token colors snapshot', async () => {
    const theme = await generateTheme()
    expect(theme.tokenColors).toMatchSnapshot()
  })

  it('should match the expected theme semantic token colors snapshot', async () => {
    const theme = await generateTheme()
    expect(theme.semanticTokenColors).toMatchSnapshot()
  })

  it('should have consistent structure between runs', async () => {
    const theme1 = await generateTheme()
    const theme2 = await generateTheme()

    // Ensure the structure is consistent between runs
    expect(Object.keys(theme1)).toEqual(Object.keys(theme2))
    expect(Object.keys(theme1.colors)).toEqual(Object.keys(theme2.colors))
    expect(theme1.tokenColors.length).toBe(theme2.tokenColors.length)
    expect(Object.keys(theme1.semanticTokenColors)).toEqual(
      Object.keys(theme2.semanticTokenColors)
    )

    // Check that all color values match
    expect(theme1.colors).toEqual(theme2.colors)
    expect(theme1.tokenColors).toEqual(theme2.tokenColors)
    expect(theme1.semanticTokenColors).toEqual(theme2.semanticTokenColors)
  })

  it('should match theme name and configuration', async () => {
    const theme = await generateTheme()
    expect(theme.name).toMatchSnapshot()
    expect(theme.type).toMatchSnapshot()
    expect(theme.semanticHighlighting).toMatchSnapshot()
  })

  it('should match specific UI color sections', async () => {
    const theme = await generateTheme()
    expect(theme.colors['editor.background']).toMatchSnapshot()
    expect(theme.colors['editor.foreground']).toMatchSnapshot()
    expect(theme.colors['tab.activeBackground']).toMatchSnapshot()
    expect(theme.colors['tab.inactiveBackground']).toMatchSnapshot()
    expect(theme.colors['sideBar.background']).toMatchSnapshot()
    expect(theme.colors['activityBar.background']).toMatchSnapshot()
    expect(theme.colors['statusBar.background']).toMatchSnapshot()
    expect(theme.colors['statusBar.noFolderBackground']).toMatchSnapshot()
    expect(theme.colors['statusBar.debuggingBackground']).toMatchSnapshot()
    expect(theme.colors['titleBar.activeBackground']).toMatchSnapshot()
    expect(theme.colors['titleBar.inactiveBackground']).toMatchSnapshot()
    expect(theme.colors['panel.background']).toMatchSnapshot()
    expect(theme.colors['terminal.background']).toMatchSnapshot()
    expect(theme.colors['terminal.foreground']).toMatchSnapshot()
    expect(theme.colors['terminal.ansiRed']).toMatchSnapshot()
    expect(theme.colors['terminal.ansiGreen']).toMatchSnapshot()
    expect(theme.colors['terminal.ansiYellow']).toMatchSnapshot()
    expect(theme.colors['terminal.ansiBlue']).toMatchSnapshot()
    expect(theme.colors['terminal.ansiMagenta']).toMatchSnapshot()
    expect(theme.colors['terminal.ansiCyan']).toMatchSnapshot()
    expect(theme.colors['terminal.ansiWhite']).toMatchSnapshot()
  })

  it('should match specific token color sections', async () => {
    const theme = await generateTheme()
    expect(theme.tokenColors).toMatchSnapshot()
  })

  it('should match specific semantic token color sections', async () => {
    const theme = await generateTheme()
    expect(theme.semanticTokenColors.function).toMatchSnapshot()
    expect(theme.semanticTokenColors['function.declaration']).toMatchSnapshot()
    expect(theme.semanticTokenColors.method).toMatchSnapshot()
    expect(theme.semanticTokenColors['method.declaration']).toMatchSnapshot()
    expect(theme.semanticTokenColors.variable).toMatchSnapshot()
    expect(theme.semanticTokenColors['variable.readonly']).toMatchSnapshot()
    expect(theme.semanticTokenColors.property).toMatchSnapshot()
    expect(theme.semanticTokenColors['property.readonly']).toMatchSnapshot()
    expect(theme.semanticTokenColors.parameter).toMatchSnapshot()
    expect(theme.semanticTokenColors['parameter.readonly']).toMatchSnapshot()
    expect(theme.semanticTokenColors.type).toMatchSnapshot()
    expect(theme.semanticTokenColors.interface).toMatchSnapshot()
    expect(theme.semanticTokenColors.class).toMatchSnapshot()
    expect(theme.semanticTokenColors.enum).toMatchSnapshot()
    expect(theme.semanticTokenColors.typeParameter).toMatchSnapshot()
    expect(theme.semanticTokenColors.struct).toMatchSnapshot()
    expect(theme.semanticTokenColors.comment).toMatchSnapshot()
    expect(theme.semanticTokenColors['comment.documentation']).toMatchSnapshot()
    expect(theme.semanticTokenColors.string).toMatchSnapshot()
    expect(theme.semanticTokenColors.number).toMatchSnapshot()
    expect(theme.semanticTokenColors.boolean).toMatchSnapshot()
    expect(theme.semanticTokenColors.regexp).toMatchSnapshot()
    expect(theme.semanticTokenColors.null).toMatchSnapshot()
    expect(theme.semanticTokenColors.undefined).toMatchSnapshot()
    expect(theme.semanticTokenColors.public).toMatchSnapshot()
    expect(theme.semanticTokenColors.private).toMatchSnapshot()
    expect(theme.semanticTokenColors.protected).toMatchSnapshot()
    expect(theme.semanticTokenColors.static).toMatchSnapshot()
    expect(theme.semanticTokenColors.readonly).toMatchSnapshot()
    expect(theme.semanticTokenColors.abstract).toMatchSnapshot()
    expect(theme.semanticTokenColors.async).toMatchSnapshot()
    expect(theme.semanticTokenColors['keyword.try']).toMatchSnapshot()
    expect(theme.semanticTokenColors['keyword.catch']).toMatchSnapshot()
    expect(theme.semanticTokenColors['keyword.throw']).toMatchSnapshot()
    expect(theme.semanticTokenColors['keyword.finally']).toMatchSnapshot()
    expect(theme.semanticTokenColors.exception).toMatchSnapshot()
  })

  it('should match modern framework semantic tokens', async () => {
    const theme = await generateTheme()
    expect(theme.semanticTokenColors['react.hook']).toMatchSnapshot()
    expect(theme.semanticTokenColors['react.component']).toMatchSnapshot()
    expect(theme.semanticTokenColors['react.props']).toMatchSnapshot()
    expect(theme.semanticTokenColors['react.state']).toMatchSnapshot()
    expect(theme.semanticTokenColors['vue.composable']).toMatchSnapshot()
    expect(theme.semanticTokenColors['vue.directive']).toMatchSnapshot()
    expect(theme.semanticTokenColors['vue.ref']).toMatchSnapshot()
    expect(theme.semanticTokenColors['typescript.generic']).toMatchSnapshot()
    expect(theme.semanticTokenColors['typescript.utility']).toMatchSnapshot()
    expect(theme.semanticTokenColors['typescript.mapped']).toMatchSnapshot()
    expect(theme.semanticTokenColors['graphql.type']).toMatchSnapshot()
    expect(theme.semanticTokenColors['graphql.field']).toMatchSnapshot()
    expect(theme.semanticTokenColors['graphql.directive']).toMatchSnapshot()
    expect(theme.semanticTokenColors['test.describe']).toMatchSnapshot()
    expect(theme.semanticTokenColors['test.assertion']).toMatchSnapshot()
    expect(theme.semanticTokenColors['test.mock']).toMatchSnapshot()
    expect(theme.semanticTokenColors['test.fixture']).toMatchSnapshot()
    expect(theme.semanticTokenColors['macro.rust']).toMatchSnapshot()
    expect(theme.semanticTokenColors['lifetime.rust']).toMatchSnapshot()
    expect(theme.semanticTokenColors['trait.rust']).toMatchSnapshot()
    expect(theme.semanticTokenColors['derive.rust']).toMatchSnapshot()
    expect(theme.semanticTokenColors['interface.go']).toMatchSnapshot()
    expect(theme.semanticTokenColors['goroutine.go']).toMatchSnapshot()
    expect(theme.semanticTokenColors['channel.go']).toMatchSnapshot()
    expect(theme.semanticTokenColors['decorator.python']).toMatchSnapshot()
    expect(theme.semanticTokenColors['typeParameter.python']).toMatchSnapshot()
    expect(theme.semanticTokenColors['async.python']).toMatchSnapshot()
    expect(theme.semanticTokenColors['signal.solid']).toMatchSnapshot()
    expect(theme.semanticTokenColors['store.solid']).toMatchSnapshot()
    expect(theme.semanticTokenColors['effect.solid']).toMatchSnapshot()
    expect(theme.semanticTokenColors['store.svelte']).toMatchSnapshot()
    expect(theme.semanticTokenColors['action.svelte']).toMatchSnapshot()
    expect(theme.semanticTokenColors['transition.svelte']).toMatchSnapshot()
    expect(theme.semanticTokenColors['component.astro']).toMatchSnapshot()
    expect(theme.semanticTokenColors['island.astro']).toMatchSnapshot()
    expect(theme.semanticTokenColors['model.orm']).toMatchSnapshot()
    expect(theme.semanticTokenColors['relation.orm']).toMatchSnapshot()
    expect(theme.semanticTokenColors['migration.orm']).toMatchSnapshot()
    expect(theme.semanticTokenColors['procedure.trpc']).toMatchSnapshot()
    expect(theme.semanticTokenColors['middleware.framework']).toMatchSnapshot()
    expect(theme.semanticTokenColors['router.framework']).toMatchSnapshot()
    expect(theme.semanticTokenColors['schema.validation']).toMatchSnapshot()
    expect(theme.semanticTokenColors['query.tanstack']).toMatchSnapshot()
    expect(theme.semanticTokenColors['mutation.tanstack']).toMatchSnapshot()
    expect(theme.semanticTokenColors['utility.css']).toMatchSnapshot()
    expect(theme.semanticTokenColors['runtime.modern']).toMatchSnapshot()
  })
})
