// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 1`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 2`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 3`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 4`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 5`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 6`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 7`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 8`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 9`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 10`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 11`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 12`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 13`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 14`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 15`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 16`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 17`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 18`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 19`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 20`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 21`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 22`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 23`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 24`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 25`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 26`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 27`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 28`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 29`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 30`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 31`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 32`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 33`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 34`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 35`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 36`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 37`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 38`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 39`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 40`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 41`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 42`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 43`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 44`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 45`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 46`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 1`] = `"#1d1b30"`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 2`] = `"#acc1e5"`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 3`] = `"#18162c"`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 4`] = `"#17152b"`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 5`] = `"#191829"`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 6`] = `"#141325"`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 7`] = `"#141325"`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 8`] = `"#141325"`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 9`] = `"#4d3f79"`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 10`] = `"#18162c"`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 11`] = `"#17152b"`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 12`] = `"#18162b"`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 13`] = `"#18162c"`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 14`] = `"#acc1e5"`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 15`] = `"#f33f8a"`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 16`] = `"#79d68c"`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 17`] = `"#d8cf91"`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 18`] = `"#57aef5"`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 19`] = `"#af92ff"`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 20`] = `"#82f1f4"`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 21`] = `"#a8bee4"`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 22`] = `"#f33f8a"`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 1`] = `
{
  "foreground": "#57aef5",
}
`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 2`] = `
{
  "fontStyle": "bold",
  "foreground": "#68b6f6",
}
`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 3`] = `
{
  "foreground": "#57aef5",
}
`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 4`] = `
{
  "fontStyle": "bold",
  "foreground": "#68b6f6",
}
`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 5`] = `
{
  "foreground": "#83aee0",
}
`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 6`] = `
{
  "fontStyle": "italic",
  "foreground": "#83aee0",
}
`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 7`] = `
{
  "foreground": "#83aee0",
}
`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 8`] = `
{
  "fontStyle": "italic",
  "foreground": "#75a5dd",
}
`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 9`] = `
{
  "foreground": "#83aee0",
}
`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 10`] = `
{
  "fontStyle": "italic",
  "foreground": "#83aee0",
}
`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 11`] = `
{
  "fontStyle": "bold",
  "foreground": "#87b5c8",
}
`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 12`] = `
{
  "fontStyle": "bold",
  "foreground": "#87b5c8",
}
`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 13`] = `
{
  "fontStyle": "bold",
  "foreground": "#bdbdb3",
}
`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 14`] = `
{
  "fontStyle": "bold",
  "foreground": "#cc936e",
}
`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 15`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 16`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 17`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 18`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 19`] = `
{
  "foreground": "#79d68c",
}
`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 20`] = `
{
  "foreground": "#cc936e",
}
`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 21`] = `
{
  "foreground": "#f33f8a",
}
`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 22`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 23`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 24`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 25`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 26`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 27`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 28`] = `
{
  "fontStyle": "italic",
  "foreground": "#57aef5",
}
`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 29`] = `
{
  "fontStyle": "italic",
  "foreground": "#74eff3",
}
`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 30`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 31`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 32`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 33`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 34`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 35`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 36`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match specific token color sections 1`] = `
[
  {
    "name": "Comment",
    "scope": [
      "comment",
      "punctuation.definition.comment",
    ],
    "settings": {
      "fontStyle": "italic",
      "foreground": "#767c9d",
    },
  },
  {
    "name": "Number, Boolean, Undefined, Null",
    "scope": [
      "constant.numeric",
      "constant.language",
      "variable.other.constant",
    ],
    "settings": {
      "foreground": "#cc936e",
    },
  },
  {
    "name": "String, Symbols",
    "scope": [
      "string",
      "constant.other.symbol",
      "constant.other.key",
    ],
    "settings": {
      "foreground": "#79d68c",
    },
  },
  {
    "name": "Colors",
    "scope": [
      "constant.other.color",
    ],
    "settings": {
      "foreground": "#acc1e5",
    },
  },
  {
    "name": "Invalid",
    "scope": [
      "invalid",
    ],
    "settings": {
      "foreground": "#f33f8a",
    },
  },
  {
    "name": "Storage Type",
    "scope": "storage.type",
    "settings": {
      "foreground": "#a686ff",
    },
  },
  {
    "name": "Storage - modifier, var, const, let",
    "scope": [
      "storage.modifier",
    ],
    "settings": {
      "foreground": "#a686ff",
    },
  },
  {
    "name": "Interpolation, PHP tags",
    "scope": [
      "punctuation.definition.template-expression",
      "punctuation.section.embedded",
    ],
    "settings": {
      "foreground": "#68b6f6",
    },
  },
  {
    "name": "Operators",
    "scope": [
      "keyword.operator",
    ],
    "settings": {
      "foreground": "#f33f8a",
    },
  },
  {
    "name": "Punctuation",
    "scope": [
      "punctuation",
    ],
    "settings": {
      "foreground": "#a8bee4",
    },
  },
  {
    "name": "Template & Misc",
    "scope": [
      "keyword.other",
      "punctuation.definition.keyword",
    ],
    "settings": {
      "foreground": "#a686ff",
    },
  },
  {
    "name": "Import, Export, From, Default",
    "scope": [
      "keyword.control.import",
      "keyword.control.export",
      "keyword.control.default",
    ],
    "settings": {
      "foreground": "#af92ff",
    },
  },
  {
    "name": "Keyword",
    "scope": [
      "keyword",
      "keyword.control",
    ],
    "settings": {
      "foreground": "#a686ff",
    },
  },
  {
    "name": "Variable Import",
    "scope": [
      "variable.other.readwrite.import",
    ],
    "settings": {
      "foreground": "#83aee0",
    },
  },
  {
    "name": "Keyword Operator Logical",
    "scope": [
      "keyword.operator.logical",
      "keyword.operator.bitwise",
      "keyword.operator.comparison",
      "keyword.operator.relational",
    ],
    "settings": {
      "foreground": "#f33f8a",
    },
  },
  {
    "name": "Variables",
    "scope": [
      "variable",
      "support.variable",
    ],
    "settings": {
      "foreground": "#83aee0",
    },
  },
  {
    "name": "Tag",
    "scope": "entity.name.tag",
    "settings": {
      "foreground": "#57aef5",
    },
  },
  {
    "name": "Tag Punctuation",
    "scope": [
      "punctuation.definition.tag",
    ],
    "settings": {
      "foreground": "#74eff3",
    },
  },
  {
    "name": "Function Arguments",
    "scope": [
      "variable.parameter",
    ],
    "settings": {
      "foreground": "#57aef5",
    },
  },
  {
    "name": "Object Key",
    "scope": [
      "meta.object-literal.key",
      "entity.name.type.hcl",
    ],
    "settings": {
      "foreground": "#8484fc",
    },
  },
  {
    "name": "Object Property",
    "scope": [
      "variable.other.property",
      "support.variable.property",
    ],
    "settings": {
      "foreground": "#bdbdb3",
    },
  },
  {
    "name": "Methods",
    "scope": [
      "entity.name.method",
      "variable.function.constructor",
    ],
    "settings": {
      "foreground": "#57aef5",
    },
  },
  {
    "name": "Function Definition",
    "scope": [
      "entity.name.function",
      "variable.function",
    ],
    "settings": {
      "foreground": "#57aef5",
    },
  },
  {
    "name": "Constant, Tag Attribute",
    "scope": [
      "constant.character",
      "constant.escape",
    ],
    "settings": {
      "foreground": "#a686ff",
    },
  },
  {
    "name": "Inherited Class",
    "scope": "entity.other.inherited-class",
    "settings": {
      "foreground": "#af92ff",
    },
  },
  {
    "name": "Class, Support, DOM, etc",
    "scope": [
      "support.class",
      "support.type",
      "support.function",
    ],
    "settings": {
      "foreground": "#cc936e",
    },
  },
  {
    "name": "Class Name",
    "scope": "entity.name",
    "settings": {
      "foreground": "#d8cf91",
    },
  },
  {
    "name": "CSS Property Name",
    "scope": [
      "support.type.property-name",
    ],
    "settings": {
      "foreground": "#74eff3",
    },
  },
  {
    "name": "CSS Tag",
    "scope": [
      "entity.name.tag.css",
    ],
    "settings": {
      "foreground": "#57aef5",
    },
  },
  {
    "name": "CSS ID",
    "scope": [
      "entity.other.attribute-name.id",
    ],
    "settings": {
      "foreground": "#a686ff",
    },
  },
  {
    "name": "CSS Class",
    "scope": [
      "entity.other.attribute-name.class",
    ],
    "settings": {
      "foreground": "#79d68c",
    },
  },
  {
    "name": "CSS Unit",
    "scope": [
      "keyword.other.unit",
    ],
    "settings": {
      "foreground": "#cc936e",
    },
  },
  {
    "name": "Markup Attribute",
    "scope": [
      "entity.other.attribute-name",
    ],
    "settings": {
      "foreground": "#74eff3",
    },
  },
  {
    "name": "Markup Bold",
    "scope": [
      "markup.bold",
    ],
    "settings": {
      "fontStyle": "bold",
      "foreground": "#cc936e",
    },
  },
  {
    "name": "Markup Italic",
    "scope": [
      "markup.italic",
    ],
    "settings": {
      "fontStyle": "italic",
      "foreground": "#10b981",
    },
  },
  {
    "name": "Markup Underline",
    "scope": [
      "markup.underline",
    ],
    "settings": {
      "fontStyle": "underline",
    },
  },
  {
    "name": "Markup Heading",
    "scope": [
      "markup.heading",
      "entity.name.section",
      "markup.heading.setext",
    ],
    "settings": {
      "fontStyle": "bold",
      "foreground": "#57aef5",
    },
  },
  {
    "name": "Markup Quote",
    "scope": [
      "markup.quote",
    ],
    "settings": {
      "fontStyle": "italic",
      "foreground": "#79d68c",
    },
  },
  {
    "name": "Markup List",
    "scope": [
      "markup.list",
    ],
    "settings": {
      "foreground": "#a686ff",
    },
  },
  {
    "name": "Markup Link",
    "scope": [
      "markup.underline.link",
      "string.other.link",
    ],
    "settings": {
      "foreground": "#57aef5",
    },
  },
  {
    "name": "Markdown Heading",
    "scope": [
      "markup.heading.markdown",
      "markup.heading.setext.markdown",
      "entity.name.section.markdown",
    ],
    "settings": {
      "fontStyle": "bold",
      "foreground": "#57aef5",
    },
  },
  {
    "name": "Markdown Link",
    "scope": [
      "string.other.link.title.markdown",
      "string.other.link.description.markdown",
    ],
    "settings": {
      "foreground": "#57aef5",
    },
  },
  {
    "name": "Markdown Code",
    "scope": [
      "markup.inline.raw.markdown",
      "markup.fenced_code.block.markdown",
    ],
    "settings": {
      "foreground": "#79d68c",
    },
  },
  {
    "name": "Markdown Bold",
    "scope": [
      "markup.bold.markdown",
    ],
    "settings": {
      "fontStyle": "bold",
      "foreground": "#cc936e",
    },
  },
  {
    "name": "Markdown Italic",
    "scope": [
      "markup.italic.markdown",
    ],
    "settings": {
      "fontStyle": "italic",
      "foreground": "#a686ff",
    },
  },
  {
    "name": "JSX Component",
    "scope": [
      "support.class.component",
    ],
    "settings": {
      "foreground": "#d6c38a",
    },
  },
  {
    "name": "JSX Tag",
    "scope": [
      "entity.name.tag.tsx",
      "entity.name.tag.jsx",
    ],
    "settings": {
      "foreground": "#57aef5",
    },
  },
  {
    "name": "TypeScript Type",
    "scope": [
      "entity.name.type.ts",
      "entity.name.type.tsx",
    ],
    "settings": {
      "foreground": "#4d9898",
    },
  },
  {
    "name": "TypeScript Interface",
    "scope": [
      "entity.name.type.interface",
    ],
    "settings": {
      "foreground": "#4d9898",
    },
  },
  {
    "name": "GraphQL Field",
    "scope": [
      "variable.graphql",
    ],
    "settings": {
      "foreground": "#57aef5",
    },
  },
  {
    "name": "JSON Key",
    "scope": [
      "support.type.property-name.json",
    ],
    "settings": {
      "foreground": "#57aef5",
    },
  },
  {
    "name": "YAML Key",
    "scope": [
      "entity.name.tag.yaml",
    ],
    "settings": {
      "foreground": "#57aef5",
    },
  },
]
`;

exports[`Snapshot Tests - Generated Theme > should match the expected theme colors snapshot 1`] = `
{
  "activityBar.activeBackground": "#1b1a2c",
  "activityBar.activeBorder": "#57aef5",
  "activityBar.background": "#141325",
  "activityBar.border": "#191829",
  "activityBar.foreground": "#a0b5d9",
  "activityBar.inactiveForeground": "#515b6f",
  "activityBarBadge.background": "#007acc",
  "activityBarBadge.foreground": "#ffffff",
  "activityBarTop.foreground": "#a8bee4",
  "activityBarTop.inactiveForeground": "#a0b5d9",
  "badge.background": "#007acc",
  "badge.foreground": "#ffffff",
  "breadcrumb.activeSelectionForeground": "#a686ff",
  "breadcrumb.background": "#18162c",
  "breadcrumb.focusForeground": "#acc1e5",
  "breadcrumb.foreground": "#a0b5d9",
  "breadcrumbPicker.background": "#18162b",
  "button.background": "#468bc4",
  "button.foreground": "#000000",
  "button.hoverBackground": "#4b96d3",
  "button.secondaryBackground": "#354d77",
  "charts.blue": "#57aef5",
  "charts.foreground": "#acc1e5",
  "charts.green": "#57aef5",
  "charts.lines": "#18162c",
  "charts.orange": "#cc936e",
  "charts.purple": "#856bcc",
  "charts.red": "#f33f8a",
  "charts.yellow": "#d8cf91",
  "chat.avatarBackground": "#468bc4",
  "chat.avatarForeground": "#acc1e5",
  "chat.requestBorder": "#2f2d41",
  "chat.slashCommandBackground": "#141325",
  "chat.slashCommandForeground": "#57aef5",
  "checkbox.background": "#18162c",
  "checkbox.border": "#253454",
  "checkbox.foreground": "#acc1e5",
  "debugConsole.errorForeground": "#c2326e",
  "debugConsole.infoForeground": "#a8bee4",
  "debugConsole.sourceForeground": "#a8bee4",
  "debugConsole.warningForeground": "#ada674",
  "debugConsoleInputIcon.foreground": "#60bebe",
  "debugExceptionWidget.background": "#141325",
  "debugExceptionWidget.border": "#c2326e",
  "debugIcon.breakpointDisabledForeground": "#2f2d41",
  "debugIcon.breakpointForeground": "#c2326e",
  "debugIcon.breakpointUnverifiedForeground": "#c2326e",
  "debugTokenExpression.boolean": "#cc936e",
  "debugTokenExpression.error": "#c2326e",
  "debugTokenExpression.name": "#82f1f4",
  "debugTokenExpression.number": "#cc936e",
  "debugTokenExpression.string": "#79d68c",
  "debugTokenExpression.value": "#acc1e5",
  "debugToolBar.background": "#141325",
  "debugView.stateLabelBackground": "#141325",
  "debugView.stateLabelForeground": "#a8bee4",
  "debugView.valueChangedHighlight": "#468bc4ab",
  "descriptionForeground": "#a8bee4",
  "diffEditor.diagonalFill": "#2a293d",
  "diffEditor.insertedLineBackground": "#61ab7020",
  "diffEditor.insertedTextBackground": "#61ab7020",
  "diffEditor.removedLineBackground": "#c2326e21",
  "diffEditor.removedTextBackground": "#c2326e21",
  "diffEditor.unchangedCodeBackground": "#26243966",
  "diffEditorGutter.insertedLineBackground": "#61ab7026",
  "diffEditorGutter.removedLineBackground": "#c2326e21",
  "diffEditorOverview.insertedForeground": "#61ab7026",
  "diffEditorOverview.removedForeground": "#c2326e21",
  "disabledForeground": "#939bc4",
  "dropdown.background": "#18162c",
  "dropdown.foreground": "#a8bee4",
  "dropdown.listBackground": "#18162c",
  "editor.background": "#1d1b30",
  "editor.findMatchBackground": "#468bc433",
  "editor.findMatchBorder": "#d8cf9180",
  "editor.findMatchHighlightBackground": "#468bc433",
  "editor.findRangeHighlightBackground": "#57aef533",
  "editor.focusedStackFrameHighlightBackground": "#60bebe20",
  "editor.foldBackground": "#14132533",
  "editor.foreground": "#acc1e5",
  "editor.inactiveSelectionBackground": "#57aef526",
  "editor.lineHighlightBackground": "#2f2d41",
  "editor.rangeHighlightBackground": "#60bebe33",
  "editor.selectionBackground": "#57aef533",
  "editor.selectionHighlightBackground": "#57aef540",
  "editor.stackFrameHighlightBackground": "#ada67420",
  "editor.wordHighlightBackground": "#57aef540",
  "editor.wordHighlightStrongBackground": "#57aef54d",
  "editorBracketHighlight.foreground1": "#d19e7d",
  "editorBracketHighlight.foreground2": "#d275e0",
  "editorBracketHighlight.foreground3": "#f45296",
  "editorBracketHighlight.foreground4": "#dcd49c",
  "editorBracketHighlight.foreground5": "#d275e0",
  "editorBracketHighlight.foreground6": "#99cc40",
  "editorBracketHighlight.unexpectedBracket.foreground": "#f33f8a",
  "editorBracketMatch.background": "#18162c",
  "editorBracketMatch.border": "#1d1b30",
  "editorBracketPairGuide.activeBackground1": "#d19e7d",
  "editorBracketPairGuide.activeBackground2": "#d275e0",
  "editorBracketPairGuide.activeBackground3": "#f45296",
  "editorBracketPairGuide.activeBackground4": "#dcd49c",
  "editorBracketPairGuide.activeBackground5": "#d275e0",
  "editorBracketPairGuide.activeBackground6": "#99cc40",
  "editorCodeLens.foreground": "#a0b5d9",
  "editorCursor.foreground": "#acc1e5",
  "editorError.foreground": "#f33f8a",
  "editorGhostText.foreground": "#767c9d",
  "editorGroup.border": "#333145",
  "editorGroup.dropBackground": "#333145",
  "editorGroupHeader.border": "#1d1b30",
  "editorGroupHeader.noTabsBackground": "#18162c",
  "editorGroupHeader.tabsBackground": "#18162c",
  "editorGroupHeader.tabsBorder": "#141325",
  "editorGutter.addedBackground": "#263849",
  "editorGutter.deletedBackground": "#5a2248",
  "editorGutter.modifiedBackground": "#434561",
  "editorHint.foreground": "#74eff3",
  "editorHoverWidget.background": "#1e2540",
  "editorHoverWidget.border": "#283c5e",
  "editorIndentGuide.activeBackground1": "#34354e",
  "editorIndentGuide.background1": "#242237",
  "editorInfo.foreground": "#74eff3",
  "editorInlayHint.foreground": "#939bc4",
  "editorLightBulb.foreground": "#d8cf91",
  "editorLightBulbAutoFix.foreground": "#d8cf91",
  "editorLineNumber.activeForeground": "#717797",
  "editorLineNumber.foreground": "#393a54",
  "editorLink.activeForeground": "#acc1e5",
  "editorMarkerNavigation.background": "#18162c",
  "editorOverviewRuler.addedForeground": "#263849",
  "editorOverviewRuler.border": "#333145",
  "editorOverviewRuler.bracketMatchForeground": "#141325",
  "editorOverviewRuler.deletedForeground": "#5a2248",
  "editorOverviewRuler.errorForeground": "#f33f8a",
  "editorOverviewRuler.findMatchForeground": "#9ea5ca66",
  "editorOverviewRuler.infoForeground": "#67c5af",
  "editorOverviewRuler.modifiedForeground": "#434561",
  "editorOverviewRuler.rangeHighlightForeground": "#60bebe4d",
  "editorOverviewRuler.selectionHighlightForeground": "#57aef540",
  "editorOverviewRuler.warningForeground": "#d8cf91",
  "editorOverviewRuler.wordHighlightForeground": "#57aef559",
  "editorOverviewRuler.wordHighlightStrongForeground": "#57aef573",
  "editorPane.background": "#2f2d41",
  "editorRuler.foreground": "#141325",
  "editorStickyScrollHover.background": "#57aef51a",
  "editorSuggestWidget.background": "#141325",
  "editorSuggestWidget.border": "#253454",
  "editorSuggestWidget.highlightForeground": "#9ea5ca",
  "editorSuggestWidget.selectedBackground": "#57aef54d",
  "editorWarning.foreground": "#d8cf91",
  "editorWhitespace.foreground": "#1485d0",
  "editorWidget.background": "#26253d",
  "editorWidget.border": "#253454",
  "editorWidget.foreground": "#acc1e5",
  "editorWidget.resizeBorder": "#253454",
  "errorForeground": "#a0b5d9",
  "extensionBadge.remoteBackground": "#468bc4",
  "extensionBadge.remoteForeground": "#000000",
  "extensionButton.prominentBackground": "#468bc4",
  "extensionButton.prominentForeground": "#000000",
  "extensionButton.prominentHoverBackground": "#4b96d3",
  "focusBorder": "#007acc4d",
  "foreground": "#acc1e5",
  "gitDecoration.addedResourceForeground": "#4d9898",
  "gitDecoration.conflictingResourceForeground": "#d8cf91cc",
  "gitDecoration.deletedResourceForeground": "#c2326e",
  "gitDecoration.ignoredResourceForeground": "#a0b5d9",
  "gitDecoration.modifiedResourceForeground": "#68b6f6",
  "gitDecoration.renamedResourceForeground": "#4d9898",
  "gitDecoration.stageDeletedResourceForeground": "#c2326e",
  "gitDecoration.stageModifiedResourceForeground": "#68b6f6",
  "gitDecoration.untrackedResourceForeground": "#4d9898",
  "gitlens.gutterBackgroundColor": "#18162c",
  "gitlens.gutterForegroundColor": "#a8bee4",
  "gitlens.gutterUncommittedForegroundColor": "#57aef5",
  "gitlens.trailingLineForegroundColor": "#767c9d",
  "icon.foreground": "#acc1e5",
  "inlineChat.foreground": "#acc1e5",
  "inlineChatDiff.inserted": "#61ab7040",
  "inlineChatDiff.removed": "#c2326e42",
  "inlineChatInput.background": "#2f2d41",
  "input.background": "#141325",
  "input.border": "#253454",
  "input.foreground": "#acc1e5",
  "input.placeholderForeground": "#a8bee48a",
  "inputOption.activeBackground": "#767c9d45",
  "inputOption.activeForeground": "#acc1e5",
  "list.activeSelectionBackground": "#57aef533",
  "list.activeSelectionForeground": "#acc1e5",
  "list.deemphasizedForeground": "#a8bee4",
  "list.dropBackground": "#2f2d41",
  "list.errorForeground": "#f33f8a",
  "list.focusBackground": "#57aef540",
  "list.focusForeground": "#acc1e5",
  "list.highlightForeground": "#acc1e5",
  "list.hoverBackground": "#57aef51a",
  "list.hoverForeground": "#acc1e5",
  "list.inactiveSelectionBackground": "#57aef526",
  "list.inactiveSelectionForeground": "#acc1e5",
  "list.invalidItemForeground": "#d0a579",
  "list.warningForeground": "#ada674",
  "listFilterWidget.background": "#141325",
  "listFilterWidget.noMatchesOutline": "#c2326e",
  "listFilterWidget.outline": "#468bc4",
  "menu.background": "#18162c",
  "menu.border": "#253454",
  "menu.foreground": "#a8bee4",
  "menu.selectionBackground": "#57aef540",
  "menu.selectionForeground": "#cddaef",
  "menu.separatorBackground": "#262439",
  "menubar.selectionBackground": "#57aef533",
  "menubar.selectionBorder": "#211f34",
  "menubar.selectionForeground": "#acc1e5",
  "merge.currentContentBackground": "#4d989845",
  "merge.currentHeaderBackground": "#61ab7026",
  "merge.incomingContentBackground": "#468bc445",
  "merge.incomingHeaderBackground": "#468bc4ab",
  "mergeEditor.change.background": "#61ab7026",
  "mergeEditor.change.word.background": "#61ab7040",
  "mergeEditor.conflict.handled.minimapOverViewRuler": "#4d9898",
  "mergeEditor.conflict.handledFocused.border": "#61ab7066",
  "mergeEditor.conflict.handledUnfocused.border": "#61ab7026",
  "mergeEditor.conflict.unhandled.minimapOverViewRuler": "#d8cf91",
  "mergeEditor.conflict.unhandledFocused.border": "#d8cf91b0",
  "mergeEditor.conflict.unhandledUnfocused.border": "#d8cf9187",
  "minimapGutter.addedBackground": "#2a4051",
  "minimapGutter.deletedBackground": "#702652",
  "minimapGutter.modifiedBackground": "#494b69",
  "multiDiffEditor.border": "#2f2d41",
  "multiDiffEditor.headerBackground": "#2f2d41",
  "notebook.cellBorderColor": "#141325",
  "notebook.cellEditorBackground": "#18162c",
  "notebook.cellStatusBarItemHoverBackground": "#57aef526",
  "notebook.editorBackground": "#2f2d41",
  "notebook.focusedCellBorder": "#253454",
  "notificationCenterHeader.background": "#18162c",
  "notificationLink.foreground": "#68b6f6",
  "notifications.background": "#18162c",
  "notificationsErrorIcon.foreground": "#c2326e",
  "notificationsInfoIcon.foreground": "#74eff3",
  "notificationsWarningIcon.foreground": "#d8cf91",
  "panel.background": "#18162b",
  "panel.border": "#253454",
  "panelInput.border": "#1d1b30",
  "panelStickyScroll.background": "#2f2d41",
  "panelTitle.activeBorder": "#57aef5",
  "panelTitle.activeForeground": "#a0b5d9",
  "panelTitle.inactiveForeground": "#8091ae",
  "peekView.border": "#253454",
  "peekViewEditor.background": "#18162c",
  "peekViewEditor.matchHighlightBackground": "#9ea5ca66",
  "peekViewResult.background": "#18162c",
  "peekViewResult.fileForeground": "#a8bee4",
  "peekViewResult.lineForeground": "#acc1e5",
  "peekViewResult.matchHighlightBackground": "#9ea5ca66",
  "peekViewResult.selectionBackground": "#57aef54d",
  "peekViewResult.selectionForeground": "#acc1e5",
  "peekViewTitle.background": "#141325",
  "peekViewTitleDescription.foreground": "#a8bee4",
  "peekViewTitleLabel.foreground": "#acc1e5",
  "pickerGroup.border": "#253454",
  "pickerGroup.foreground": "#acc1e5",
  "progressBar.background": "#468bc4",
  "quickInput.background": "#18162c",
  "sash.hoverBorder": "#333145",
  "scmGraph.foreground1": "#57aef5",
  "scmGraph.foreground2": "#a686ff",
  "scmGraph.foreground3": "#74eff3",
  "scmGraph.foreground4": "#cd66dd",
  "scmGraph.foreground5": "#cd66dd",
  "scmGraph.historyItemBaseRefColor": "#74eff3",
  "scmGraph.historyItemHoverAdditionsForeground": "#61ab70",
  "scmGraph.historyItemHoverDefaultLabelForeground": "#acc1e5",
  "scmGraph.historyItemHoverDeletionsForeground": "#f33f8a",
  "scmGraph.historyItemHoverLabelForeground": "#141325",
  "scmGraph.historyItemRefColor": "#57aef5",
  "scmGraph.historyItemRemoteRefColor": "#a686ff",
  "scrollbar.shadow": "#00000033",
  "scrollbarSlider.activeBackground": "#57aef54d",
  "scrollbarSlider.background": "#a8bee40a",
  "scrollbarSlider.hoverBackground": "#57aef533",
  "selection.background": "#57aef533",
  "settings.headerForeground": "#9ea5ca",
  "sideBar.background": "#191829",
  "sideBar.border": "#1d1c2e",
  "sideBar.dropBackground": "#2f2d41",
  "sideBar.foreground": "#a8bee4",
  "sideBarSectionHeader.background": "#1d1c2e",
  "sideBarSectionHeader.border": "#222132",
  "sideBarSectionHeader.foreground": "#a0b5d9",
  "sideBarTitle.foreground": "#a0b5d9",
  "statusBar.background": "#141325",
  "statusBar.border": "#191829",
  "statusBar.debuggingBackground": "#4d3f79",
  "statusBar.debuggingForeground": "#a0b5d9",
  "statusBar.focusBorder": "#57aef5",
  "statusBar.foreground": "#a0b5d9",
  "statusBar.noFolderBackground": "#141325",
  "statusBarItem.activeBackground": "#57aef540",
  "statusBarItem.focusBorder": "#57aef5",
  "statusBarItem.hoverBackground": "#57aef526",
  "statusBarItem.prominentBackground": "#57aef540",
  "statusBarItem.prominentHoverBackground": "#57aef54d",
  "statusBarItem.remoteBackground": "#57aef540",
  "statusBarItem.remoteHoverForeground": "#b9cbe9",
  "tab.activeBackground": "#18162c",
  "tab.activeBorderTop": "#a686ff",
  "tab.activeForeground": "#acc1e5",
  "tab.activeModifiedBorder": "#a686ff",
  "tab.border": "#333145",
  "tab.hoverForeground": "#acc1e5",
  "tab.inactiveBackground": "#17152b",
  "tab.inactiveForeground": "#a0b5d9",
  "tab.inactiveModifiedBorder": "#211f34",
  "tab.lastPinnedBorder": "#a686ff",
  "tab.unfocusedActiveBorder": "#211f34",
  "tab.unfocusedActiveForeground": "#a8bee4",
  "tab.unfocusedActiveModifiedBorder": "#211f34",
  "tab.unfocusedHoverForeground": "#a8bee4",
  "tab.unfocusedInactiveForeground": "#a0b5d9",
  "tab.unfocusedInactiveModifiedBorder": "#333145",
  "terminal.ansiBlack": "#141325",
  "terminal.ansiBlue": "#57aef5",
  "terminal.ansiBrightBlack": "#939bc4",
  "terminal.ansiBrightBlue": "#68b6f6",
  "terminal.ansiBrightCyan": "#82f1f4",
  "terminal.ansiBrightGreen": "#61ab70",
  "terminal.ansiBrightMagenta": "#af92ff",
  "terminal.ansiBrightRed": "#c2326e",
  "terminal.ansiBrightWhite": "#acc1e5",
  "terminal.ansiBrightYellow": "#dcd49c",
  "terminal.ansiCyan": "#82f1f4",
  "terminal.ansiGreen": "#79d68c",
  "terminal.ansiMagenta": "#af92ff",
  "terminal.ansiRed": "#f33f8a",
  "terminal.ansiWhite": "#a8bee4",
  "terminal.ansiYellow": "#d8cf91",
  "terminal.background": "#18162c",
  "terminal.foreground": "#acc1e5",
  "terminal.selectionBackground": "#468bc44d",
  "terminalCursor.background": "#2f2d41",
  "terminalCursor.foreground": "#acc1e5",
  "textBlockQuote.background": "#18162c",
  "textCodeBlock.background": "#18162c",
  "textLink.activeForeground": "#86c5f8",
  "textLink.foreground": "#68b6f6",
  "textPreformat.foreground": "#a8bee4",
  "textSeparator.foreground": "#3b394c",
  "titleBar.activeBackground": "#18162c",
  "titleBar.activeForeground": "#a0b5d9",
  "titleBar.border": "#1d1b30",
  "titleBar.inactiveBackground": "#17152b",
  "titleBar.inactiveForeground": "#606d82",
  "toolbar.activeBackground": "#2f2d41",
  "toolbar.hoverBackground": "#2f2d41",
  "tree.indentGuidesStroke": "#2a293d",
  "walkThrough.embeddedEditorBackground": "#18162c",
  "widget.shadow": "#0000004d",
  "window.activeBorder": "#141325",
  "window.inactiveBorder": "#141325",
}
`;

exports[`Snapshot Tests - Generated Theme > should match the expected theme semantic token colors snapshot 1`] = `
{
  "boolean": {
    "foreground": "#f33f8a",
  },
  "class": {
    "fontStyle": "bold",
    "foreground": "#bdbdb3",
  },
  "class.component": {
    "fontStyle": "bold",
    "foreground": "#60bebe",
  },
  "constructor": {
    "fontStyle": "bold",
    "foreground": "#d8cf91",
  },
  "decorator": {
    "fontStyle": "italic",
    "foreground": "#cd66dd",
  },
  "enum": {
    "fontStyle": "bold",
    "foreground": "#cc936e",
  },
  "enumMember": {
    "foreground": "#d19e7d",
  },
  "function": {
    "foreground": "#57aef5",
  },
  "function.declaration": {
    "fontStyle": "bold",
    "foreground": "#68b6f6",
  },
  "function.defaultLibrary": {
    "foreground": "#74eff3",
  },
  "interface": {
    "fontStyle": "bold",
    "foreground": "#87b5c8",
  },
  "interface.component": {
    "fontStyle": "bold",
    "foreground": "#60bebe",
  },
  "macro": {
    "fontStyle": "bold",
    "foreground": "#a686ff",
  },
  "method": {
    "foreground": "#57aef5",
  },
  "method.declaration": {
    "fontStyle": "bold",
    "foreground": "#68b6f6",
  },
  "namespace": {
    "foreground": "#8484fc",
  },
  "number": {
    "foreground": "#cc936e",
  },
  "parameter": {
    "foreground": "#83aee0",
  },
  "parameter.readonly": {
    "fontStyle": "italic",
    "foreground": "#83aee0",
  },
  "property": {
    "foreground": "#83aee0",
  },
  "property.readonly": {
    "fontStyle": "italic",
    "foreground": "#75a5dd",
  },
  "readonly": {
    "fontStyle": "italic",
    "foreground": "#74eff3",
  },
  "static": {
    "fontStyle": "italic",
    "foreground": "#57aef5",
  },
  "string": {
    "foreground": "#79d68c",
  },
  "string.escape": {
    "foreground": "#d8cf91",
  },
  "string.template": {
    "foreground": "#10b981",
  },
  "type": {
    "fontStyle": "bold",
    "foreground": "#87b5c8",
  },
  "variable": {
    "foreground": "#83aee0",
  },
  "variable.defaultLibrary": {
    "foreground": "#83aee0",
  },
  "variable.readonly": {
    "fontStyle": "italic",
    "foreground": "#83aee0",
  },
}
`;

exports[`Snapshot Tests - Generated Theme > should match the expected theme snapshot 1`] = `
{
  "colors": {
    "activityBar.activeBackground": "#1b1a2c",
    "activityBar.activeBorder": "#57aef5",
    "activityBar.background": "#141325",
    "activityBar.border": "#191829",
    "activityBar.foreground": "#a0b5d9",
    "activityBar.inactiveForeground": "#515b6f",
    "activityBarBadge.background": "#007acc",
    "activityBarBadge.foreground": "#ffffff",
    "activityBarTop.foreground": "#a8bee4",
    "activityBarTop.inactiveForeground": "#a0b5d9",
    "badge.background": "#007acc",
    "badge.foreground": "#ffffff",
    "breadcrumb.activeSelectionForeground": "#a686ff",
    "breadcrumb.background": "#18162c",
    "breadcrumb.focusForeground": "#acc1e5",
    "breadcrumb.foreground": "#a0b5d9",
    "breadcrumbPicker.background": "#18162b",
    "button.background": "#468bc4",
    "button.foreground": "#000000",
    "button.hoverBackground": "#4b96d3",
    "button.secondaryBackground": "#354d77",
    "charts.blue": "#57aef5",
    "charts.foreground": "#acc1e5",
    "charts.green": "#57aef5",
    "charts.lines": "#18162c",
    "charts.orange": "#cc936e",
    "charts.purple": "#856bcc",
    "charts.red": "#f33f8a",
    "charts.yellow": "#d8cf91",
    "chat.avatarBackground": "#468bc4",
    "chat.avatarForeground": "#acc1e5",
    "chat.requestBorder": "#2f2d41",
    "chat.slashCommandBackground": "#141325",
    "chat.slashCommandForeground": "#57aef5",
    "checkbox.background": "#18162c",
    "checkbox.border": "#253454",
    "checkbox.foreground": "#acc1e5",
    "debugConsole.errorForeground": "#c2326e",
    "debugConsole.infoForeground": "#a8bee4",
    "debugConsole.sourceForeground": "#a8bee4",
    "debugConsole.warningForeground": "#ada674",
    "debugConsoleInputIcon.foreground": "#60bebe",
    "debugExceptionWidget.background": "#141325",
    "debugExceptionWidget.border": "#c2326e",
    "debugIcon.breakpointDisabledForeground": "#2f2d41",
    "debugIcon.breakpointForeground": "#c2326e",
    "debugIcon.breakpointUnverifiedForeground": "#c2326e",
    "debugTokenExpression.boolean": "#cc936e",
    "debugTokenExpression.error": "#c2326e",
    "debugTokenExpression.name": "#82f1f4",
    "debugTokenExpression.number": "#cc936e",
    "debugTokenExpression.string": "#79d68c",
    "debugTokenExpression.value": "#acc1e5",
    "debugToolBar.background": "#141325",
    "debugView.stateLabelBackground": "#141325",
    "debugView.stateLabelForeground": "#a8bee4",
    "debugView.valueChangedHighlight": "#468bc4ab",
    "descriptionForeground": "#a8bee4",
    "diffEditor.diagonalFill": "#2a293d",
    "diffEditor.insertedLineBackground": "#61ab7020",
    "diffEditor.insertedTextBackground": "#61ab7020",
    "diffEditor.removedLineBackground": "#c2326e21",
    "diffEditor.removedTextBackground": "#c2326e21",
    "diffEditor.unchangedCodeBackground": "#26243966",
    "diffEditorGutter.insertedLineBackground": "#61ab7026",
    "diffEditorGutter.removedLineBackground": "#c2326e21",
    "diffEditorOverview.insertedForeground": "#61ab7026",
    "diffEditorOverview.removedForeground": "#c2326e21",
    "disabledForeground": "#939bc4",
    "dropdown.background": "#18162c",
    "dropdown.foreground": "#a8bee4",
    "dropdown.listBackground": "#18162c",
    "editor.background": "#1d1b30",
    "editor.findMatchBackground": "#468bc433",
    "editor.findMatchBorder": "#d8cf9180",
    "editor.findMatchHighlightBackground": "#468bc433",
    "editor.findRangeHighlightBackground": "#57aef533",
    "editor.focusedStackFrameHighlightBackground": "#60bebe20",
    "editor.foldBackground": "#14132533",
    "editor.foreground": "#acc1e5",
    "editor.inactiveSelectionBackground": "#57aef526",
    "editor.lineHighlightBackground": "#2f2d41",
    "editor.rangeHighlightBackground": "#60bebe33",
    "editor.selectionBackground": "#57aef533",
    "editor.selectionHighlightBackground": "#57aef540",
    "editor.stackFrameHighlightBackground": "#ada67420",
    "editor.wordHighlightBackground": "#57aef540",
    "editor.wordHighlightStrongBackground": "#57aef54d",
    "editorBracketHighlight.foreground1": "#d19e7d",
    "editorBracketHighlight.foreground2": "#d275e0",
    "editorBracketHighlight.foreground3": "#f45296",
    "editorBracketHighlight.foreground4": "#dcd49c",
    "editorBracketHighlight.foreground5": "#d275e0",
    "editorBracketHighlight.foreground6": "#99cc40",
    "editorBracketHighlight.unexpectedBracket.foreground": "#f33f8a",
    "editorBracketMatch.background": "#18162c",
    "editorBracketMatch.border": "#1d1b30",
    "editorBracketPairGuide.activeBackground1": "#d19e7d",
    "editorBracketPairGuide.activeBackground2": "#d275e0",
    "editorBracketPairGuide.activeBackground3": "#f45296",
    "editorBracketPairGuide.activeBackground4": "#dcd49c",
    "editorBracketPairGuide.activeBackground5": "#d275e0",
    "editorBracketPairGuide.activeBackground6": "#99cc40",
    "editorCodeLens.foreground": "#a0b5d9",
    "editorCursor.foreground": "#acc1e5",
    "editorError.foreground": "#f33f8a",
    "editorGhostText.foreground": "#767c9d",
    "editorGroup.border": "#333145",
    "editorGroup.dropBackground": "#333145",
    "editorGroupHeader.border": "#1d1b30",
    "editorGroupHeader.noTabsBackground": "#18162c",
    "editorGroupHeader.tabsBackground": "#18162c",
    "editorGroupHeader.tabsBorder": "#141325",
    "editorGutter.addedBackground": "#263849",
    "editorGutter.deletedBackground": "#5a2248",
    "editorGutter.modifiedBackground": "#434561",
    "editorHint.foreground": "#74eff3",
    "editorHoverWidget.background": "#1e2540",
    "editorHoverWidget.border": "#283c5e",
    "editorIndentGuide.activeBackground1": "#34354e",
    "editorIndentGuide.background1": "#242237",
    "editorInfo.foreground": "#74eff3",
    "editorInlayHint.foreground": "#939bc4",
    "editorLightBulb.foreground": "#d8cf91",
    "editorLightBulbAutoFix.foreground": "#d8cf91",
    "editorLineNumber.activeForeground": "#717797",
    "editorLineNumber.foreground": "#393a54",
    "editorLink.activeForeground": "#acc1e5",
    "editorMarkerNavigation.background": "#18162c",
    "editorOverviewRuler.addedForeground": "#263849",
    "editorOverviewRuler.border": "#333145",
    "editorOverviewRuler.bracketMatchForeground": "#141325",
    "editorOverviewRuler.deletedForeground": "#5a2248",
    "editorOverviewRuler.errorForeground": "#f33f8a",
    "editorOverviewRuler.findMatchForeground": "#9ea5ca66",
    "editorOverviewRuler.infoForeground": "#67c5af",
    "editorOverviewRuler.modifiedForeground": "#434561",
    "editorOverviewRuler.rangeHighlightForeground": "#60bebe4d",
    "editorOverviewRuler.selectionHighlightForeground": "#57aef540",
    "editorOverviewRuler.warningForeground": "#d8cf91",
    "editorOverviewRuler.wordHighlightForeground": "#57aef559",
    "editorOverviewRuler.wordHighlightStrongForeground": "#57aef573",
    "editorPane.background": "#2f2d41",
    "editorRuler.foreground": "#141325",
    "editorStickyScrollHover.background": "#57aef51a",
    "editorSuggestWidget.background": "#141325",
    "editorSuggestWidget.border": "#253454",
    "editorSuggestWidget.highlightForeground": "#9ea5ca",
    "editorSuggestWidget.selectedBackground": "#57aef54d",
    "editorWarning.foreground": "#d8cf91",
    "editorWhitespace.foreground": "#1485d0",
    "editorWidget.background": "#26253d",
    "editorWidget.border": "#253454",
    "editorWidget.foreground": "#acc1e5",
    "editorWidget.resizeBorder": "#253454",
    "errorForeground": "#a0b5d9",
    "extensionBadge.remoteBackground": "#468bc4",
    "extensionBadge.remoteForeground": "#000000",
    "extensionButton.prominentBackground": "#468bc4",
    "extensionButton.prominentForeground": "#000000",
    "extensionButton.prominentHoverBackground": "#4b96d3",
    "focusBorder": "#007acc4d",
    "foreground": "#acc1e5",
    "gitDecoration.addedResourceForeground": "#4d9898",
    "gitDecoration.conflictingResourceForeground": "#d8cf91cc",
    "gitDecoration.deletedResourceForeground": "#c2326e",
    "gitDecoration.ignoredResourceForeground": "#a0b5d9",
    "gitDecoration.modifiedResourceForeground": "#68b6f6",
    "gitDecoration.renamedResourceForeground": "#4d9898",
    "gitDecoration.stageDeletedResourceForeground": "#c2326e",
    "gitDecoration.stageModifiedResourceForeground": "#68b6f6",
    "gitDecoration.untrackedResourceForeground": "#4d9898",
    "gitlens.gutterBackgroundColor": "#18162c",
    "gitlens.gutterForegroundColor": "#a8bee4",
    "gitlens.gutterUncommittedForegroundColor": "#57aef5",
    "gitlens.trailingLineForegroundColor": "#767c9d",
    "icon.foreground": "#acc1e5",
    "inlineChat.foreground": "#acc1e5",
    "inlineChatDiff.inserted": "#61ab7040",
    "inlineChatDiff.removed": "#c2326e42",
    "inlineChatInput.background": "#2f2d41",
    "input.background": "#141325",
    "input.border": "#253454",
    "input.foreground": "#acc1e5",
    "input.placeholderForeground": "#a8bee48a",
    "inputOption.activeBackground": "#767c9d45",
    "inputOption.activeForeground": "#acc1e5",
    "list.activeSelectionBackground": "#57aef533",
    "list.activeSelectionForeground": "#acc1e5",
    "list.deemphasizedForeground": "#a8bee4",
    "list.dropBackground": "#2f2d41",
    "list.errorForeground": "#f33f8a",
    "list.focusBackground": "#57aef540",
    "list.focusForeground": "#acc1e5",
    "list.highlightForeground": "#acc1e5",
    "list.hoverBackground": "#57aef51a",
    "list.hoverForeground": "#acc1e5",
    "list.inactiveSelectionBackground": "#57aef526",
    "list.inactiveSelectionForeground": "#acc1e5",
    "list.invalidItemForeground": "#d0a579",
    "list.warningForeground": "#ada674",
    "listFilterWidget.background": "#141325",
    "listFilterWidget.noMatchesOutline": "#c2326e",
    "listFilterWidget.outline": "#468bc4",
    "menu.background": "#18162c",
    "menu.border": "#253454",
    "menu.foreground": "#a8bee4",
    "menu.selectionBackground": "#57aef540",
    "menu.selectionForeground": "#cddaef",
    "menu.separatorBackground": "#262439",
    "menubar.selectionBackground": "#57aef533",
    "menubar.selectionBorder": "#211f34",
    "menubar.selectionForeground": "#acc1e5",
    "merge.currentContentBackground": "#4d989845",
    "merge.currentHeaderBackground": "#61ab7026",
    "merge.incomingContentBackground": "#468bc445",
    "merge.incomingHeaderBackground": "#468bc4ab",
    "mergeEditor.change.background": "#61ab7026",
    "mergeEditor.change.word.background": "#61ab7040",
    "mergeEditor.conflict.handled.minimapOverViewRuler": "#4d9898",
    "mergeEditor.conflict.handledFocused.border": "#61ab7066",
    "mergeEditor.conflict.handledUnfocused.border": "#61ab7026",
    "mergeEditor.conflict.unhandled.minimapOverViewRuler": "#d8cf91",
    "mergeEditor.conflict.unhandledFocused.border": "#d8cf91b0",
    "mergeEditor.conflict.unhandledUnfocused.border": "#d8cf9187",
    "minimapGutter.addedBackground": "#2a4051",
    "minimapGutter.deletedBackground": "#702652",
    "minimapGutter.modifiedBackground": "#494b69",
    "multiDiffEditor.border": "#2f2d41",
    "multiDiffEditor.headerBackground": "#2f2d41",
    "notebook.cellBorderColor": "#141325",
    "notebook.cellEditorBackground": "#18162c",
    "notebook.cellStatusBarItemHoverBackground": "#57aef526",
    "notebook.editorBackground": "#2f2d41",
    "notebook.focusedCellBorder": "#253454",
    "notificationCenterHeader.background": "#18162c",
    "notificationLink.foreground": "#68b6f6",
    "notifications.background": "#18162c",
    "notificationsErrorIcon.foreground": "#c2326e",
    "notificationsInfoIcon.foreground": "#74eff3",
    "notificationsWarningIcon.foreground": "#d8cf91",
    "panel.background": "#18162b",
    "panel.border": "#253454",
    "panelInput.border": "#1d1b30",
    "panelStickyScroll.background": "#2f2d41",
    "panelTitle.activeBorder": "#57aef5",
    "panelTitle.activeForeground": "#a0b5d9",
    "panelTitle.inactiveForeground": "#8091ae",
    "peekView.border": "#253454",
    "peekViewEditor.background": "#18162c",
    "peekViewEditor.matchHighlightBackground": "#9ea5ca66",
    "peekViewResult.background": "#18162c",
    "peekViewResult.fileForeground": "#a8bee4",
    "peekViewResult.lineForeground": "#acc1e5",
    "peekViewResult.matchHighlightBackground": "#9ea5ca66",
    "peekViewResult.selectionBackground": "#57aef54d",
    "peekViewResult.selectionForeground": "#acc1e5",
    "peekViewTitle.background": "#141325",
    "peekViewTitleDescription.foreground": "#a8bee4",
    "peekViewTitleLabel.foreground": "#acc1e5",
    "pickerGroup.border": "#253454",
    "pickerGroup.foreground": "#acc1e5",
    "progressBar.background": "#468bc4",
    "quickInput.background": "#18162c",
    "sash.hoverBorder": "#333145",
    "scmGraph.foreground1": "#57aef5",
    "scmGraph.foreground2": "#a686ff",
    "scmGraph.foreground3": "#74eff3",
    "scmGraph.foreground4": "#cd66dd",
    "scmGraph.foreground5": "#cd66dd",
    "scmGraph.historyItemBaseRefColor": "#74eff3",
    "scmGraph.historyItemHoverAdditionsForeground": "#61ab70",
    "scmGraph.historyItemHoverDefaultLabelForeground": "#acc1e5",
    "scmGraph.historyItemHoverDeletionsForeground": "#f33f8a",
    "scmGraph.historyItemHoverLabelForeground": "#141325",
    "scmGraph.historyItemRefColor": "#57aef5",
    "scmGraph.historyItemRemoteRefColor": "#a686ff",
    "scrollbar.shadow": "#00000033",
    "scrollbarSlider.activeBackground": "#57aef54d",
    "scrollbarSlider.background": "#a8bee40a",
    "scrollbarSlider.hoverBackground": "#57aef533",
    "selection.background": "#57aef533",
    "settings.headerForeground": "#9ea5ca",
    "sideBar.background": "#191829",
    "sideBar.border": "#1d1c2e",
    "sideBar.dropBackground": "#2f2d41",
    "sideBar.foreground": "#a8bee4",
    "sideBarSectionHeader.background": "#1d1c2e",
    "sideBarSectionHeader.border": "#222132",
    "sideBarSectionHeader.foreground": "#a0b5d9",
    "sideBarTitle.foreground": "#a0b5d9",
    "statusBar.background": "#141325",
    "statusBar.border": "#191829",
    "statusBar.debuggingBackground": "#4d3f79",
    "statusBar.debuggingForeground": "#a0b5d9",
    "statusBar.focusBorder": "#57aef5",
    "statusBar.foreground": "#a0b5d9",
    "statusBar.noFolderBackground": "#141325",
    "statusBarItem.activeBackground": "#57aef540",
    "statusBarItem.focusBorder": "#57aef5",
    "statusBarItem.hoverBackground": "#57aef526",
    "statusBarItem.prominentBackground": "#57aef540",
    "statusBarItem.prominentHoverBackground": "#57aef54d",
    "statusBarItem.remoteBackground": "#57aef540",
    "statusBarItem.remoteHoverForeground": "#b9cbe9",
    "tab.activeBackground": "#18162c",
    "tab.activeBorderTop": "#a686ff",
    "tab.activeForeground": "#acc1e5",
    "tab.activeModifiedBorder": "#a686ff",
    "tab.border": "#333145",
    "tab.hoverForeground": "#acc1e5",
    "tab.inactiveBackground": "#17152b",
    "tab.inactiveForeground": "#a0b5d9",
    "tab.inactiveModifiedBorder": "#211f34",
    "tab.lastPinnedBorder": "#a686ff",
    "tab.unfocusedActiveBorder": "#211f34",
    "tab.unfocusedActiveForeground": "#a8bee4",
    "tab.unfocusedActiveModifiedBorder": "#211f34",
    "tab.unfocusedHoverForeground": "#a8bee4",
    "tab.unfocusedInactiveForeground": "#a0b5d9",
    "tab.unfocusedInactiveModifiedBorder": "#333145",
    "terminal.ansiBlack": "#141325",
    "terminal.ansiBlue": "#57aef5",
    "terminal.ansiBrightBlack": "#939bc4",
    "terminal.ansiBrightBlue": "#68b6f6",
    "terminal.ansiBrightCyan": "#82f1f4",
    "terminal.ansiBrightGreen": "#61ab70",
    "terminal.ansiBrightMagenta": "#af92ff",
    "terminal.ansiBrightRed": "#c2326e",
    "terminal.ansiBrightWhite": "#acc1e5",
    "terminal.ansiBrightYellow": "#dcd49c",
    "terminal.ansiCyan": "#82f1f4",
    "terminal.ansiGreen": "#79d68c",
    "terminal.ansiMagenta": "#af92ff",
    "terminal.ansiRed": "#f33f8a",
    "terminal.ansiWhite": "#a8bee4",
    "terminal.ansiYellow": "#d8cf91",
    "terminal.background": "#18162c",
    "terminal.foreground": "#acc1e5",
    "terminal.selectionBackground": "#468bc44d",
    "terminalCursor.background": "#2f2d41",
    "terminalCursor.foreground": "#acc1e5",
    "textBlockQuote.background": "#18162c",
    "textCodeBlock.background": "#18162c",
    "textLink.activeForeground": "#86c5f8",
    "textLink.foreground": "#68b6f6",
    "textPreformat.foreground": "#a8bee4",
    "textSeparator.foreground": "#3b394c",
    "titleBar.activeBackground": "#18162c",
    "titleBar.activeForeground": "#a0b5d9",
    "titleBar.border": "#1d1b30",
    "titleBar.inactiveBackground": "#17152b",
    "titleBar.inactiveForeground": "#606d82",
    "toolbar.activeBackground": "#2f2d41",
    "toolbar.hoverBackground": "#2f2d41",
    "tree.indentGuidesStroke": "#2a293d",
    "walkThrough.embeddedEditorBackground": "#18162c",
    "widget.shadow": "#0000004d",
    "window.activeBorder": "#141325",
    "window.inactiveBorder": "#141325",
  },
  "name": "Tokyo Modern",
  "semanticHighlighting": true,
  "semanticTokenColors": {
    "boolean": {
      "foreground": "#f33f8a",
    },
    "class": {
      "fontStyle": "bold",
      "foreground": "#bdbdb3",
    },
    "class.component": {
      "fontStyle": "bold",
      "foreground": "#60bebe",
    },
    "constructor": {
      "fontStyle": "bold",
      "foreground": "#d8cf91",
    },
    "decorator": {
      "fontStyle": "italic",
      "foreground": "#cd66dd",
    },
    "enum": {
      "fontStyle": "bold",
      "foreground": "#cc936e",
    },
    "enumMember": {
      "foreground": "#d19e7d",
    },
    "function": {
      "foreground": "#57aef5",
    },
    "function.declaration": {
      "fontStyle": "bold",
      "foreground": "#68b6f6",
    },
    "function.defaultLibrary": {
      "foreground": "#74eff3",
    },
    "interface": {
      "fontStyle": "bold",
      "foreground": "#87b5c8",
    },
    "interface.component": {
      "fontStyle": "bold",
      "foreground": "#60bebe",
    },
    "macro": {
      "fontStyle": "bold",
      "foreground": "#a686ff",
    },
    "method": {
      "foreground": "#57aef5",
    },
    "method.declaration": {
      "fontStyle": "bold",
      "foreground": "#68b6f6",
    },
    "namespace": {
      "foreground": "#8484fc",
    },
    "number": {
      "foreground": "#cc936e",
    },
    "parameter": {
      "foreground": "#83aee0",
    },
    "parameter.readonly": {
      "fontStyle": "italic",
      "foreground": "#83aee0",
    },
    "property": {
      "foreground": "#83aee0",
    },
    "property.readonly": {
      "fontStyle": "italic",
      "foreground": "#75a5dd",
    },
    "readonly": {
      "fontStyle": "italic",
      "foreground": "#74eff3",
    },
    "static": {
      "fontStyle": "italic",
      "foreground": "#57aef5",
    },
    "string": {
      "foreground": "#79d68c",
    },
    "string.escape": {
      "foreground": "#d8cf91",
    },
    "string.template": {
      "foreground": "#10b981",
    },
    "type": {
      "fontStyle": "bold",
      "foreground": "#87b5c8",
    },
    "variable": {
      "foreground": "#83aee0",
    },
    "variable.defaultLibrary": {
      "foreground": "#83aee0",
    },
    "variable.readonly": {
      "fontStyle": "italic",
      "foreground": "#83aee0",
    },
  },
  "tokenColors": [
    {
      "name": "Comment",
      "scope": [
        "comment",
        "punctuation.definition.comment",
      ],
      "settings": {
        "fontStyle": "italic",
        "foreground": "#767c9d",
      },
    },
    {
      "name": "Number, Boolean, Undefined, Null",
      "scope": [
        "constant.numeric",
        "constant.language",
        "variable.other.constant",
      ],
      "settings": {
        "foreground": "#cc936e",
      },
    },
    {
      "name": "String, Symbols",
      "scope": [
        "string",
        "constant.other.symbol",
        "constant.other.key",
      ],
      "settings": {
        "foreground": "#79d68c",
      },
    },
    {
      "name": "Colors",
      "scope": [
        "constant.other.color",
      ],
      "settings": {
        "foreground": "#acc1e5",
      },
    },
    {
      "name": "Invalid",
      "scope": [
        "invalid",
      ],
      "settings": {
        "foreground": "#f33f8a",
      },
    },
    {
      "name": "Storage Type",
      "scope": "storage.type",
      "settings": {
        "foreground": "#a686ff",
      },
    },
    {
      "name": "Storage - modifier, var, const, let",
      "scope": [
        "storage.modifier",
      ],
      "settings": {
        "foreground": "#a686ff",
      },
    },
    {
      "name": "Interpolation, PHP tags",
      "scope": [
        "punctuation.definition.template-expression",
        "punctuation.section.embedded",
      ],
      "settings": {
        "foreground": "#68b6f6",
      },
    },
    {
      "name": "Operators",
      "scope": [
        "keyword.operator",
      ],
      "settings": {
        "foreground": "#f33f8a",
      },
    },
    {
      "name": "Punctuation",
      "scope": [
        "punctuation",
      ],
      "settings": {
        "foreground": "#a8bee4",
      },
    },
    {
      "name": "Template & Misc",
      "scope": [
        "keyword.other",
        "punctuation.definition.keyword",
      ],
      "settings": {
        "foreground": "#a686ff",
      },
    },
    {
      "name": "Import, Export, From, Default",
      "scope": [
        "keyword.control.import",
        "keyword.control.export",
        "keyword.control.default",
      ],
      "settings": {
        "foreground": "#af92ff",
      },
    },
    {
      "name": "Keyword",
      "scope": [
        "keyword",
        "keyword.control",
      ],
      "settings": {
        "foreground": "#a686ff",
      },
    },
    {
      "name": "Variable Import",
      "scope": [
        "variable.other.readwrite.import",
      ],
      "settings": {
        "foreground": "#83aee0",
      },
    },
    {
      "name": "Keyword Operator Logical",
      "scope": [
        "keyword.operator.logical",
        "keyword.operator.bitwise",
        "keyword.operator.comparison",
        "keyword.operator.relational",
      ],
      "settings": {
        "foreground": "#f33f8a",
      },
    },
    {
      "name": "Variables",
      "scope": [
        "variable",
        "support.variable",
      ],
      "settings": {
        "foreground": "#83aee0",
      },
    },
    {
      "name": "Tag",
      "scope": "entity.name.tag",
      "settings": {
        "foreground": "#57aef5",
      },
    },
    {
      "name": "Tag Punctuation",
      "scope": [
        "punctuation.definition.tag",
      ],
      "settings": {
        "foreground": "#74eff3",
      },
    },
    {
      "name": "Function Arguments",
      "scope": [
        "variable.parameter",
      ],
      "settings": {
        "foreground": "#57aef5",
      },
    },
    {
      "name": "Object Key",
      "scope": [
        "meta.object-literal.key",
        "entity.name.type.hcl",
      ],
      "settings": {
        "foreground": "#8484fc",
      },
    },
    {
      "name": "Object Property",
      "scope": [
        "variable.other.property",
        "support.variable.property",
      ],
      "settings": {
        "foreground": "#bdbdb3",
      },
    },
    {
      "name": "Methods",
      "scope": [
        "entity.name.method",
        "variable.function.constructor",
      ],
      "settings": {
        "foreground": "#57aef5",
      },
    },
    {
      "name": "Function Definition",
      "scope": [
        "entity.name.function",
        "variable.function",
      ],
      "settings": {
        "foreground": "#57aef5",
      },
    },
    {
      "name": "Constant, Tag Attribute",
      "scope": [
        "constant.character",
        "constant.escape",
      ],
      "settings": {
        "foreground": "#a686ff",
      },
    },
    {
      "name": "Inherited Class",
      "scope": "entity.other.inherited-class",
      "settings": {
        "foreground": "#af92ff",
      },
    },
    {
      "name": "Class, Support, DOM, etc",
      "scope": [
        "support.class",
        "support.type",
        "support.function",
      ],
      "settings": {
        "foreground": "#cc936e",
      },
    },
    {
      "name": "Class Name",
      "scope": "entity.name",
      "settings": {
        "foreground": "#d8cf91",
      },
    },
    {
      "name": "CSS Property Name",
      "scope": [
        "support.type.property-name",
      ],
      "settings": {
        "foreground": "#74eff3",
      },
    },
    {
      "name": "CSS Tag",
      "scope": [
        "entity.name.tag.css",
      ],
      "settings": {
        "foreground": "#57aef5",
      },
    },
    {
      "name": "CSS ID",
      "scope": [
        "entity.other.attribute-name.id",
      ],
      "settings": {
        "foreground": "#a686ff",
      },
    },
    {
      "name": "CSS Class",
      "scope": [
        "entity.other.attribute-name.class",
      ],
      "settings": {
        "foreground": "#79d68c",
      },
    },
    {
      "name": "CSS Unit",
      "scope": [
        "keyword.other.unit",
      ],
      "settings": {
        "foreground": "#cc936e",
      },
    },
    {
      "name": "Markup Attribute",
      "scope": [
        "entity.other.attribute-name",
      ],
      "settings": {
        "foreground": "#74eff3",
      },
    },
    {
      "name": "Markup Bold",
      "scope": [
        "markup.bold",
      ],
      "settings": {
        "fontStyle": "bold",
        "foreground": "#cc936e",
      },
    },
    {
      "name": "Markup Italic",
      "scope": [
        "markup.italic",
      ],
      "settings": {
        "fontStyle": "italic",
        "foreground": "#10b981",
      },
    },
    {
      "name": "Markup Underline",
      "scope": [
        "markup.underline",
      ],
      "settings": {
        "fontStyle": "underline",
      },
    },
    {
      "name": "Markup Heading",
      "scope": [
        "markup.heading",
        "entity.name.section",
        "markup.heading.setext",
      ],
      "settings": {
        "fontStyle": "bold",
        "foreground": "#57aef5",
      },
    },
    {
      "name": "Markup Quote",
      "scope": [
        "markup.quote",
      ],
      "settings": {
        "fontStyle": "italic",
        "foreground": "#79d68c",
      },
    },
    {
      "name": "Markup List",
      "scope": [
        "markup.list",
      ],
      "settings": {
        "foreground": "#a686ff",
      },
    },
    {
      "name": "Markup Link",
      "scope": [
        "markup.underline.link",
        "string.other.link",
      ],
      "settings": {
        "foreground": "#57aef5",
      },
    },
    {
      "name": "Markdown Heading",
      "scope": [
        "markup.heading.markdown",
        "markup.heading.setext.markdown",
        "entity.name.section.markdown",
      ],
      "settings": {
        "fontStyle": "bold",
        "foreground": "#57aef5",
      },
    },
    {
      "name": "Markdown Link",
      "scope": [
        "string.other.link.title.markdown",
        "string.other.link.description.markdown",
      ],
      "settings": {
        "foreground": "#57aef5",
      },
    },
    {
      "name": "Markdown Code",
      "scope": [
        "markup.inline.raw.markdown",
        "markup.fenced_code.block.markdown",
      ],
      "settings": {
        "foreground": "#79d68c",
      },
    },
    {
      "name": "Markdown Bold",
      "scope": [
        "markup.bold.markdown",
      ],
      "settings": {
        "fontStyle": "bold",
        "foreground": "#cc936e",
      },
    },
    {
      "name": "Markdown Italic",
      "scope": [
        "markup.italic.markdown",
      ],
      "settings": {
        "fontStyle": "italic",
        "foreground": "#a686ff",
      },
    },
    {
      "name": "JSX Component",
      "scope": [
        "support.class.component",
      ],
      "settings": {
        "foreground": "#d6c38a",
      },
    },
    {
      "name": "JSX Tag",
      "scope": [
        "entity.name.tag.tsx",
        "entity.name.tag.jsx",
      ],
      "settings": {
        "foreground": "#57aef5",
      },
    },
    {
      "name": "TypeScript Type",
      "scope": [
        "entity.name.type.ts",
        "entity.name.type.tsx",
      ],
      "settings": {
        "foreground": "#4d9898",
      },
    },
    {
      "name": "TypeScript Interface",
      "scope": [
        "entity.name.type.interface",
      ],
      "settings": {
        "foreground": "#4d9898",
      },
    },
    {
      "name": "GraphQL Field",
      "scope": [
        "variable.graphql",
      ],
      "settings": {
        "foreground": "#57aef5",
      },
    },
    {
      "name": "JSON Key",
      "scope": [
        "support.type.property-name.json",
      ],
      "settings": {
        "foreground": "#57aef5",
      },
    },
    {
      "name": "YAML Key",
      "scope": [
        "entity.name.tag.yaml",
      ],
      "settings": {
        "foreground": "#57aef5",
      },
    },
  ],
  "type": "dark",
}
`;

exports[`Snapshot Tests - Generated Theme > should match the expected theme token colors snapshot 1`] = `
[
  {
    "name": "Comment",
    "scope": [
      "comment",
      "punctuation.definition.comment",
    ],
    "settings": {
      "fontStyle": "italic",
      "foreground": "#767c9d",
    },
  },
  {
    "name": "Number, Boolean, Undefined, Null",
    "scope": [
      "constant.numeric",
      "constant.language",
      "variable.other.constant",
    ],
    "settings": {
      "foreground": "#cc936e",
    },
  },
  {
    "name": "String, Symbols",
    "scope": [
      "string",
      "constant.other.symbol",
      "constant.other.key",
    ],
    "settings": {
      "foreground": "#79d68c",
    },
  },
  {
    "name": "Colors",
    "scope": [
      "constant.other.color",
    ],
    "settings": {
      "foreground": "#acc1e5",
    },
  },
  {
    "name": "Invalid",
    "scope": [
      "invalid",
    ],
    "settings": {
      "foreground": "#f33f8a",
    },
  },
  {
    "name": "Storage Type",
    "scope": "storage.type",
    "settings": {
      "foreground": "#a686ff",
    },
  },
  {
    "name": "Storage - modifier, var, const, let",
    "scope": [
      "storage.modifier",
    ],
    "settings": {
      "foreground": "#a686ff",
    },
  },
  {
    "name": "Interpolation, PHP tags",
    "scope": [
      "punctuation.definition.template-expression",
      "punctuation.section.embedded",
    ],
    "settings": {
      "foreground": "#68b6f6",
    },
  },
  {
    "name": "Operators",
    "scope": [
      "keyword.operator",
    ],
    "settings": {
      "foreground": "#f33f8a",
    },
  },
  {
    "name": "Punctuation",
    "scope": [
      "punctuation",
    ],
    "settings": {
      "foreground": "#a8bee4",
    },
  },
  {
    "name": "Template & Misc",
    "scope": [
      "keyword.other",
      "punctuation.definition.keyword",
    ],
    "settings": {
      "foreground": "#a686ff",
    },
  },
  {
    "name": "Import, Export, From, Default",
    "scope": [
      "keyword.control.import",
      "keyword.control.export",
      "keyword.control.default",
    ],
    "settings": {
      "foreground": "#af92ff",
    },
  },
  {
    "name": "Keyword",
    "scope": [
      "keyword",
      "keyword.control",
    ],
    "settings": {
      "foreground": "#a686ff",
    },
  },
  {
    "name": "Variable Import",
    "scope": [
      "variable.other.readwrite.import",
    ],
    "settings": {
      "foreground": "#83aee0",
    },
  },
  {
    "name": "Keyword Operator Logical",
    "scope": [
      "keyword.operator.logical",
      "keyword.operator.bitwise",
      "keyword.operator.comparison",
      "keyword.operator.relational",
    ],
    "settings": {
      "foreground": "#f33f8a",
    },
  },
  {
    "name": "Variables",
    "scope": [
      "variable",
      "support.variable",
    ],
    "settings": {
      "foreground": "#83aee0",
    },
  },
  {
    "name": "Tag",
    "scope": "entity.name.tag",
    "settings": {
      "foreground": "#57aef5",
    },
  },
  {
    "name": "Tag Punctuation",
    "scope": [
      "punctuation.definition.tag",
    ],
    "settings": {
      "foreground": "#74eff3",
    },
  },
  {
    "name": "Function Arguments",
    "scope": [
      "variable.parameter",
    ],
    "settings": {
      "foreground": "#57aef5",
    },
  },
  {
    "name": "Object Key",
    "scope": [
      "meta.object-literal.key",
      "entity.name.type.hcl",
    ],
    "settings": {
      "foreground": "#8484fc",
    },
  },
  {
    "name": "Object Property",
    "scope": [
      "variable.other.property",
      "support.variable.property",
    ],
    "settings": {
      "foreground": "#bdbdb3",
    },
  },
  {
    "name": "Methods",
    "scope": [
      "entity.name.method",
      "variable.function.constructor",
    ],
    "settings": {
      "foreground": "#57aef5",
    },
  },
  {
    "name": "Function Definition",
    "scope": [
      "entity.name.function",
      "variable.function",
    ],
    "settings": {
      "foreground": "#57aef5",
    },
  },
  {
    "name": "Constant, Tag Attribute",
    "scope": [
      "constant.character",
      "constant.escape",
    ],
    "settings": {
      "foreground": "#a686ff",
    },
  },
  {
    "name": "Inherited Class",
    "scope": "entity.other.inherited-class",
    "settings": {
      "foreground": "#af92ff",
    },
  },
  {
    "name": "Class, Support, DOM, etc",
    "scope": [
      "support.class",
      "support.type",
      "support.function",
    ],
    "settings": {
      "foreground": "#cc936e",
    },
  },
  {
    "name": "Class Name",
    "scope": "entity.name",
    "settings": {
      "foreground": "#d8cf91",
    },
  },
  {
    "name": "CSS Property Name",
    "scope": [
      "support.type.property-name",
    ],
    "settings": {
      "foreground": "#74eff3",
    },
  },
  {
    "name": "CSS Tag",
    "scope": [
      "entity.name.tag.css",
    ],
    "settings": {
      "foreground": "#57aef5",
    },
  },
  {
    "name": "CSS ID",
    "scope": [
      "entity.other.attribute-name.id",
    ],
    "settings": {
      "foreground": "#a686ff",
    },
  },
  {
    "name": "CSS Class",
    "scope": [
      "entity.other.attribute-name.class",
    ],
    "settings": {
      "foreground": "#79d68c",
    },
  },
  {
    "name": "CSS Unit",
    "scope": [
      "keyword.other.unit",
    ],
    "settings": {
      "foreground": "#cc936e",
    },
  },
  {
    "name": "Markup Attribute",
    "scope": [
      "entity.other.attribute-name",
    ],
    "settings": {
      "foreground": "#74eff3",
    },
  },
  {
    "name": "Markup Bold",
    "scope": [
      "markup.bold",
    ],
    "settings": {
      "fontStyle": "bold",
      "foreground": "#cc936e",
    },
  },
  {
    "name": "Markup Italic",
    "scope": [
      "markup.italic",
    ],
    "settings": {
      "fontStyle": "italic",
      "foreground": "#10b981",
    },
  },
  {
    "name": "Markup Underline",
    "scope": [
      "markup.underline",
    ],
    "settings": {
      "fontStyle": "underline",
    },
  },
  {
    "name": "Markup Heading",
    "scope": [
      "markup.heading",
      "entity.name.section",
      "markup.heading.setext",
    ],
    "settings": {
      "fontStyle": "bold",
      "foreground": "#57aef5",
    },
  },
  {
    "name": "Markup Quote",
    "scope": [
      "markup.quote",
    ],
    "settings": {
      "fontStyle": "italic",
      "foreground": "#79d68c",
    },
  },
  {
    "name": "Markup List",
    "scope": [
      "markup.list",
    ],
    "settings": {
      "foreground": "#a686ff",
    },
  },
  {
    "name": "Markup Link",
    "scope": [
      "markup.underline.link",
      "string.other.link",
    ],
    "settings": {
      "foreground": "#57aef5",
    },
  },
  {
    "name": "Markdown Heading",
    "scope": [
      "markup.heading.markdown",
      "markup.heading.setext.markdown",
      "entity.name.section.markdown",
    ],
    "settings": {
      "fontStyle": "bold",
      "foreground": "#57aef5",
    },
  },
  {
    "name": "Markdown Link",
    "scope": [
      "string.other.link.title.markdown",
      "string.other.link.description.markdown",
    ],
    "settings": {
      "foreground": "#57aef5",
    },
  },
  {
    "name": "Markdown Code",
    "scope": [
      "markup.inline.raw.markdown",
      "markup.fenced_code.block.markdown",
    ],
    "settings": {
      "foreground": "#79d68c",
    },
  },
  {
    "name": "Markdown Bold",
    "scope": [
      "markup.bold.markdown",
    ],
    "settings": {
      "fontStyle": "bold",
      "foreground": "#cc936e",
    },
  },
  {
    "name": "Markdown Italic",
    "scope": [
      "markup.italic.markdown",
    ],
    "settings": {
      "fontStyle": "italic",
      "foreground": "#a686ff",
    },
  },
  {
    "name": "JSX Component",
    "scope": [
      "support.class.component",
    ],
    "settings": {
      "foreground": "#d6c38a",
    },
  },
  {
    "name": "JSX Tag",
    "scope": [
      "entity.name.tag.tsx",
      "entity.name.tag.jsx",
    ],
    "settings": {
      "foreground": "#57aef5",
    },
  },
  {
    "name": "TypeScript Type",
    "scope": [
      "entity.name.type.ts",
      "entity.name.type.tsx",
    ],
    "settings": {
      "foreground": "#4d9898",
    },
  },
  {
    "name": "TypeScript Interface",
    "scope": [
      "entity.name.type.interface",
    ],
    "settings": {
      "foreground": "#4d9898",
    },
  },
  {
    "name": "GraphQL Field",
    "scope": [
      "variable.graphql",
    ],
    "settings": {
      "foreground": "#57aef5",
    },
  },
  {
    "name": "JSON Key",
    "scope": [
      "support.type.property-name.json",
    ],
    "settings": {
      "foreground": "#57aef5",
    },
  },
  {
    "name": "YAML Key",
    "scope": [
      "entity.name.tag.yaml",
    ],
    "settings": {
      "foreground": "#57aef5",
    },
  },
]
`;

exports[`Snapshot Tests - Generated Theme > should match theme name and configuration 1`] = `"Tokyo Modern"`;

exports[`Snapshot Tests - Generated Theme > should match theme name and configuration 2`] = `"dark"`;

exports[`Snapshot Tests - Generated Theme > should match theme name and configuration 3`] = `true`;
